welcome.lessons.welcome.bat.bool2.ShareDigit.scala.error
shareDigit:2: error: type mismatch;
 found   : Int(2)
 required: Boolean
	return 25/10
                 ^