welcome.lessons.welcome.bat.bool2.ShareDigit.scala.code
def shareDigit(a:Int, b:Int):Boolean = {
	return 25/10
}
